test_regress/t/t_inst_noname_bad.out
%Error: t/t_inst_noname_bad.v:8:5: Instance of module must be named
    8 |     m ();
      |     ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_inst_noname_bad.v:9:5: Instance of module must be named
    9 |     m ();
      |     ^
%Error: Exiting due to
